Actions
Bug #6160
closed'\\'.delete('\\') raise ArgumentError: empty string
Bug #6160:
'\\'.delete('\\') raise ArgumentError: empty string
Description
r35069 の変更の影響でクリーンビルドすると
../tool/transcode-tblgen.rb:758:in `delete': empty string (ArgumentError)
で止まります。
再現条件を絞り込んだところ '\'.delete('\') で ArgumentError になりました。
Updated by znz (Kazuhiro NISHIYAMA) over 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r35073.
Kazuhiro, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
-
string.c (trnext): fix bug with string ending with '\'.
[ruby-dev:45374][Bug #6160] -
test/ruby/test_string.rb (TestString#test_delete): test for
above.
Actions